--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Ruby on Rails Tutorial Sample App | Help</title>
+    </head>
+<body>
+
 <h1>Help</h1>
 <p>
     Get help on the Ruby on Rails Tutorials at the 
@@ -5,3 +12,6 @@
     To get help on this sample app, see the 
     <a href="http://railstutorial.org/book">Rials Tutorial book</a?
 </p>
+
+</body>
+</html>
