--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Sample App</h1>
-<p>
-    This is the home page of the 
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> 
-    Sample application
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Ruby on Rails Tutorial Sample App | Home</title>
+    </head>
+<body>
+	<h1>Sample App</h1>
+	<p>
+	    This is the home page of the 
+	    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> 
+	    Sample application
+	</p>
+    </body>
+</html>
