--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-    <title>Ruby on Rails Tutorial Sample App | Help</title>
-    </head>
-<body>
-
+<% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
     Get help on the Ruby on Rails Tutorials at the 
     <a href="http://railstutorial.org/help">Rails Tutorial help page</a>
     To get help on this sample app, see the 
-    <a href="http://railstutorial.org/book">Rials Tutorial book</a?
+    <a href="http://railstutorial.org/book">Rails Tutorial book</a?
 </p>
 
-</body>
-</html>
