--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+/* mixins, variables, etc. */
+$grayMediumLight: #eaeaea;
 /* universal */
 
 html {
@@ -20,10 +22,10 @@ textarea {
 
 .center {
     text-align: center;
-}
+    h1 {
+	margin-bottom: 10px;
+    }
 
-.center h1 {
-    margin-bottom: 10px;
 }
 
 
@@ -46,7 +48,7 @@ h2 {
     margin-bottom: 30px;
     text-align: center; 
     font-weight: normal;
-    color: #999;
+    color: $grayLight;
 }
 
 
@@ -60,46 +62,45 @@ p {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: white;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
     line-height: 1;
-}
+    &:hover {
+	color: white;
+	text-decoration: none;
+    }
 
-#logo:hover {
-    color: #fff;
-    text-decoration: none;
 }
 
 /* footer */
-
 footer {
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #999;
-}
+    border-top: 1px solid $grayMediumLight;
+    color: $grayLight;
+    a {
+	color: $gray;
+	&:hover {
+	    color:$grayDarker;
+	}
 
-footer a {
-    color: #555;
-}
+    }
 
-footer a:hover {
-    color: #222;
-}
+    small {
+	float: left;
+    }
+	
+    ul {
+	float: right;
+	list-style: none;
+	li {
+	    float: left;
+	    margin-left: 10px;
+	}
+    }
 
-footer small {
-    float: left;
 }
-
-footer ul {
-    float: right;
-    list-style: none;
-}
-
-footer ul li {
-    float: left;
-    margin-left: 10px;
-}
+ 
