--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Contact') %>
 <h1>Contact Us</h1>
 <p>
 Contact Ruby on Rails Tutorial abou the sample ap at the <a href="http://railstutorial.org/contact">contact page</a>
